js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-arrow-assignment-expression-import-assertions-trailing-comma-first.js
let
f
=
(
)
=
>
import
(
'
.
/
empty_FIXTURE
.
js
'
)
;
reportCompare
(
0
0
)
;
